--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style>
 		html, body { margin: 0; padding: 0; overflow: hidden; height: 100% }
 	</style>
-	<script src="http://threejs.org/build/three.min.js"></script>
+	<script src="three.min.js"></script>
 	<script src="index.js"></script>
 </head>
 <body>
