Remove three.js

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>A Dice for DFT</title>
-	<style>
-		html, body { margin: 0; padding: 0; overflow: hidden; height: 100% }
-	</style>
-	<script src="three.min.js"></script>
+	<link rel="stylesheet" href="index.css" />
+	<script src="dat.gui.min.js"></script>
 	<script src="index.js"></script>
 </head>
 <body>
-
+<div id="prize"></div>
+<div id="namesCanvas"></div>
 </body>
 </html>
