--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>A Dice for DFT</title>
 	<link rel="stylesheet" href="index.css" />
 	<script src="dat.gui.min.js"></script>
+	<script src="improvedNoize.js"></script>
 	<script src="index.js"></script>
 </head>
 <body>
