--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="index.js"></script>
 </head>
 <body>
-<div id="prize"></div>
+<div id="prize">PRIZ</div>
 <div id="namesCanvas"></div>
 </body>
 </html>
