Add name roller

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <div id="prize">PRIZ</div>
-<div id="namesCanvas"></div>
+<div id="titleCanvas"></div>
+<div id="names">
+	<ul id="roller"></ul>
+</div>
 </body>
 </html>
