--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<script src="index.js"></script>
 </head>
 <body>
-<div id="prize">PRIZ</div>
+<div id="prize">
+	<div class="priz">没有名字的大奖</div>
+</div>
 <div id="titleCanvas"></div>
 <div id="names">
 	<ul id="roller"></ul>
