--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>A Dice for DFT</title>
+	<link href='http://fonts.useso.com/css?family=Open+Sans:300,400,600&subset=latin,latin-ext' rel='stylesheet'>
 	<link rel="stylesheet" href="index.css" />
 	<script src="dat.gui.min.js"></script>
 	<script src="improvedNoize.js"></script>
